FIX: Style collapse button

--- a/src/styles.css
+++ b/src/styles.css
@@ -18,6 +18,17 @@
   border-color: #e6edee !important;
 }
 
+/* navbar toggler */
+.btn-danger{
+    border: 2px solid transparent;
+    border-color: #f5fbff !important;
+    color: #495057 !important;
+}
+.btn-danger:hover{
+  background-color: #A239CA;
+  border-color: #A239CA !important;
+}
+
 /* contorno delle carte e del video */
 .border-primary{ border-color: #63c4f4 !important;}
 .border-primary:hover{ border-color: #A239CA !important;}
